# schoolCalServer

./: Cargo.toml  README.md
src/: calgen.rs  main.rs
