[package]
name = "school_cal_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
ics = "0.5.8"
chrono = "0.4.24"
uuid = { version = "1.3.0", features = ["v4"] }
num-traits = "0.2.15"
